Update documentation source files

--- a/docs/source/tutorials/scRNA_CODEX_HPAP023/hpap023_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_HPAP023/hpap023_tutorial.ipynb
@@ -4,27 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrate scRNA-seq and CODEX datasets from HPAP023 donor "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Integrate scRNA-seq and CODEX datasets from HPAP023 donor\n",
+    "\n",
     "Overview\n",
-    "This tutorial demonstrates how to integrate HPAP023 scRNA-seq and CODEX spatial proteomic datasets using CelLink. It walks through data loading, preprocessing, feature matching across modalities, alignment with Cellink, and visualization and evaluation of integration quality.\n",
+    "\n",
+    "This tutorial demonstrates how to integrate HPAP023 scRNA-seq and CODEX spatial proteomic datasets using CelLink. \n",
     "\n",
     "Outline\n",
-    "1. Environment and imports\n",
-    "2. Data loading (scRNA and CODEX)\n",
-    "3. Preprocessing and feature selection\n",
-    "4. Establish correspondence between RNA and protein features\n",
-    "5. Build Cellink object and perform alignment\n",
-    "6. Visualize integration and compute metrics\n",
+    "1. Data acquire\n",
+    "2. Data preprocessing\n",
+    "3. Building Cellink object and running alignment\n",
+    "4. Visualization\n",
     "\n",
     "Notes\n",
-    "- Update file paths to your local data directory before running.\n",
-    "- Run the notebook in an environment with packages listed in `docs/requirements.txt`."
+    "- Update file paths to your local data directory before running.\n"
    ]
   },
   {
@@ -49,8 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Environment & dependencies\n",
-    "The code below imports the primary packages used in this notebook. Ensure you have compatible versions of `anndata`, `scanpy`, `numpy`, `pandas`, `matplotlib`, and `cellink` installed. Use the environment or `pip install -r docs/requirements.txt` provided in the repository to reproduce results."
+    "## Data acquire\n",
+    "\n",
+    "Load or download the example HPAP023 scRNA and CODEX datasets used in this tutorial. "
    ]
   },
   {
@@ -68,7 +62,8 @@
    "metadata": {},
    "source": [
     "Data files (scRNA)\n",
-    "Load the scRNA count matrix exported as CSV. The file is expected to have gene identifiers in the first column and cell barcodes as column headers. If your data format differs (e.g., MTX/loom/h5ad), adapt the loading step accordingly.\n",
+    "\n",
+    "Load the scRNA count matrix exported as CSV. The file is expected to have gene identifiers in the first column and cell barcodes as column headers. If your data format differs, adapt the loading step accordingly.\n",
     "\n",
     "Replace the hard-coded path with your local data path before executing."
    ]
@@ -106,7 +101,8 @@
    "metadata": {},
    "source": [
     "Protein (CODEX) data\n",
-    "Load the CODEX protein-level AnnData object. The dataset should include spatial coordinates in `obsm['spatial']` and optional cell type annotations in `obs['cell_type']`. Here we remove any cells labeled as `Unidentified` to focus downstream analyses on annotated cells."
+    "\n",
+    "Load the CODEX AnnData object. The dataset should include spatial coordinates in `obsm['spatial']` and optional cell type annotations in `obs['cell_type']`. "
    ]
   },
   {
@@ -122,8 +118,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spatial filtering & QC\n",
-    "Depending on the imaging experiment, you may need to subset cells by spatial region or apply quality filters. In this example we keep cells within a spatial window (example thresholds shown) to remove potential artifacts at image edges. Adjust thresholds to your dataset."
+    "## Data preprocessing\n",
+    "\n",
+    "Depending on the imaging experiment, you may need to subset cells by spatial region or apply quality filters. Adjust thresholds to your dataset."
    ]
   },
   {
@@ -191,8 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cell type harmonization\n",
-    "Different datasets may use slightly different cell-type labels. The function below maps several related labels into a common vocabulary (for example grouping endothelial subtypes). Modify the mapping to match your annotation scheme."
+    "Apply standard preprocessing to the scRNA data. Typical steps include normalization, log-transform, HVG selection.\n"
    ]
   },
   {
@@ -264,6 +260,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature correspondence between modalities\n",
+    "\n",
+    "Establish a mapping between protein markers (CODEX) and gene symbols (scRNA). This mapping is used to create matched-feature AnnData objects for alignment.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -295,6 +300,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create shared AnnData objects and subset\n",
+    "\n",
+    "From the correspondence, construct `rna_shared` and `protein_shared` containing only matched features. Optionally subset to cell types of interest and filter low-variance features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -320,7 +334,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create shared AnnData objects\n",
     "From the correspondence table we extract matched features and construct two AnnData objects (`rna_shared` and `protein_shared`) that contain only the shared features used for integration."
    ]
   },
@@ -341,7 +354,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Subset cell types of interest\n",
     "To focus analysis, we subset both datasets to a set of cell types (e.g., Alpha, Exocrine, Delta-PP, Ductal). Remove or change this list to include different cell types or run the full dataset."
    ]
   },
@@ -381,8 +393,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter low-variance features\n",
-    "Remove features with low variance in either modality as they provide little information for alignment. The variance thresholds here are illustrative; tune them based on your data."
+    "## Build Cellink object & batching\n",
+    "\n",
+    "Create a `Cellink` object with full and shared AnnData objects and split the shared data into batches for efficient transport computation.\n"
    ]
   },
   {
@@ -412,8 +425,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize Cellink and batching\n",
-    "Create a `Cellink` instance providing full and shared AnnData objects. When working with large datasets, split into batches to reduce memory usage and speed up transport computation. The `split_into_batches` call partitions both modalities."
+    "## Alignment: preparations and execution\n",
+    "\n",
+    "Run the CelLink alignment routine. Tune weights and regularization parameters, and consider iterative refinement.\n",
+    "\n",
+    "### Alignment parameters\n",
+    "- `wt1` / `wt2`: modality weights\n",
+    "- `lambd`, `reg`: regularization\n",
+    "- `numItermax`: maximum iterations\n"
    ]
   },
   {
@@ -822,12 +841,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alignment parameters and execution\n",
-    "Run the alignment routine with weights and regularization parameters. Important parameters:\n",
-    "- `wt1`, `wt2`: weights for modalities\n",
-    "- `lambd`, `reg`: regularization strengths\n",
-    "- `numItermax`: maximum iterations\n",
-    "Iteratively tune parameters for best performance on your dataset."
+    "## Synchronize imputed features & predict cell types\n",
+    "\n",
+    "After alignment, imputed features are synchronized back to the original datasets. Predicted cell types are inferred from transport maps and can be compared to original annotations for evaluation."
    ]
   },
   {
@@ -839,14 +855,6 @@
     "rna_source_ct_array = combined_adata.obs['cell_type']\n",
     "protein_source_ct_array = protein_adata_filter.obs['cell_type']\n",
     "rna_aligned_protein, rna_predict_ct_array, protein_aligned_rna, protein_predict_ct_array = cellink.synchronize_imputed_to_initial()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Synchronize imputed features and predict cell types\n",
-    "After alignment, imputed features are synchronized back to the original datasets. Predicted cell types are inferred from transport maps and can be compared to original annotations for evaluation."
    ]
   },
   {
@@ -872,6 +880,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization\n",
+    "\n",
+    "Produce joint embeddings (UMAP) on concatenated original + imputed features and visualize modality mixing and cell-type concordance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -890,14 +907,6 @@
    "source": [
     "cellink.visualize_integration(ann1_full_batch=combined_adata, ann2_full_batch=protein_adata_filter, arr2_imputed=protein_aligned_rna,\n",
     "                              datatype= ['scRNA', 'CODEX'], matched_cellids=protein_matched_cellids, direction=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Visualization of aligned features\n",
-    "Use the provided visualization utilities to inspect how well cells from the two modalities align. The plotting functions highlight matched cells and show imputed expression across modalities."
    ]
   },
   {
