--- a/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
@@ -12,21 +12,17 @@
    "metadata": {},
    "source": [
     "Overview\n",
-    "This tutorial demonstrates how to integrate HPAP107 scRNA-seq and CODEX datasets from human pancreas using CelLink. It follows the structure used in the MaxFuse tutorials: clear separation of environment setup, data acquisition, preprocessing, alignment, evaluation, and visualization.\n",
+    "\n",
+    "This tutorial demonstrates how to integrate HPAP107 scRNA-seq and CODEX datasets from human pancreas using CelLink. \n",
     "\n",
     "Outline\n",
-    "1. Environment and imports\n",
-    "2. Data download and extraction\n",
-    "3. Loading preprocessed AnnData objects\n",
-    "4. Preparing annotations and handling missing cell types\n",
-    "5. Building Cellink object and running alignment\n",
-    "6. Predicting cell types via transport maps\n",
-    "7. Visualization and evaluation (UMAP, confusion matrix, GC, ASW)\n",
-    "8. Summary and next steps\n",
+    "1. Data acquire\n",
+    "2. Data preprocessing\n",
+    "3. Building Cellink object and running alignment\n",
+    "4. Visualization\n",
     "\n",
     "Notes\n",
-    "- Adjust file paths and parameters to your local environment and dataset sizes.\n",
-    "- Use the repository `docs/requirements.txt` to install compatible dependencies."
+    "- Adjust file paths and parameters to your local environment and dataset sizes."
    ]
   },
   {
@@ -73,8 +69,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Environment & imports\n",
-    "The next cell imports core scientific Python packages and CelLink dependencies. Ensure the Python environment contains `anndata`, `scanpy`, `numpy`, `pandas`, `scikit-learn`, `umap-learn`, and `cellink` (see `docs/requirements.txt`). These libraries are used for data handling, preprocessing, dimensionality reduction, and alignment."
+    "## Data acquire\n",
+    "\n",
+    "Download the example HPAP107 preprocessed AnnData files from the provided Dropbox link. The archive contains preprocessed AnnData objects for combined scRNA, CODEX, and shared-feature subsets.. If using your own data, update the file paths accordingly."
    ]
   },
   {
@@ -98,14 +95,6 @@
     "    zip_ref.extractall(extract_dir)\n",
     "\n",
     "print(\"unzipped data in:\", extract_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Data download\n",
-    "Download the example HPAP107 dataset from the provided Dropbox link. The archive contains preprocessed AnnData objects for combined scRNA, CODEX, and shared-feature subsets. If using your own data, you can skip this download and load your local files instead."
    ]
   },
   {
@@ -145,6 +134,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data preprocessing\n",
+    "\n",
+    "\n",
+    "Copy `cell_type` to `cell_type1` and then remove the original `cell_type` to evaluate no celltype task. If your dataset lacks cell-type annotations, skip this block."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -168,8 +167,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Handling cell type labels\n",
-    "Some datasets include a `cell_type` column. To avoid overwriting and to standardize metric calculations, we copy `cell_type` to `cell_type1` and then remove the original `cell_type`. If your dataset lacks cell-type annotations, skip this block — downstream evaluation will then run without ground-truth labels."
+    "### Feature correspondence between modalities\n",
+    "\n",
+    "Load the protein-gene mapping and construct matched-feature AnnData objects for alignment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building Cellink object and running alignment\n",
+    "\n",
+    "Create `Cellink` with full and shared AnnData objects; split into batches for efficiency."
    ]
   },
   {
@@ -199,8 +208,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Batching strategy\n",
-    "Create a `Cellink` object and split shared-feature datasets into batches. Batching reduces memory usage and parallelizes transport computation. Choose batch sizes according to dataset size and available memory; larger batches speed convergence at the cost of memory."
+    "### Alignment: preparations and execution\n",
+    "\n",
+    "Run the alignment with tuning parameters controlling modality weights, regularization, and iterative refinements. Key parameters:\n",
+    "- `wt1`, `wt2`: relative importance of each modality\n",
+    "- `lambd`, `reg`: regularization terms\n",
+    "- `n_neighbors`: neighbors used to smooth local structure\n"
    ]
   },
   {
@@ -226,12 +239,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alignment parameters\n",
-    "Run the alignment with tuning parameters controlling modality weights, regularization, and iterative refinements. Key parameters:\n",
-    "- `wt1`, `wt2`: relative importance of each modality\n",
-    "- `lambd`, `reg`: regularization terms\n",
-    "- `n_neighbors`: neighbors used to compute local structure\n",
-    "Tune these values empirically, monitor convergence, and inspect downstream metrics to choose the best settings."
+    "### Synchronize imputed features & predict cell types\n",
+    "\n",
+    "After alignment, transport weights are used to predict cell types in each modality by aggregating transport mass to cells of each annotation class. We also impute cross-modal features using the learned transport maps. "
    ]
   },
   {
@@ -298,8 +308,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predicting cell types and imputing features\n",
-    "After alignment, transport weights are used to predict cell types in each modality by aggregating transport mass to cells of each annotation class. We also impute cross-modal features using the learned transport maps. The loops below compute predicted labels and imputed feature matrices for all batches."
+    "## Visualization\n",
+    "\n",
+    "Compute UMAPs and produce embedding panels and confusion matrices to evaluate alignment."
    ]
   },
   {
@@ -318,14 +329,6 @@
     "dataall_2 = np.concatenate([scrna_all, codex_all], axis = 0)\n",
     "embedding_2 = umap.UMAP(n_components=2, n_epochs = 500, n_neighbors = 15, random_state = 30, min_dist = 0.5).fit_transform(dataall_2)\n",
     "ct_array_double_2 = np.concatenate([rna_source_ct_array, protein_source_ct_array], axis = 0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "UMAP embedding for joint visualization\n",
-    "Concatenate original and imputed features to create joint feature vectors for scRNA and CODEX cells. Apply UMAP on the concatenated matrix to visualize how well modalities mix after alignment. Color points by cell type to assess matching quality."
    ]
   },
   {
@@ -358,6 +361,15 @@
    "source": [
     "Quantitative metrics\n",
     "Use built-in metrics to quantify alignment quality. The `cellink.metrics` module computes cell-type matching accuracy and other scores. Run these functions to obtain a numeric summary of performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quantitative metrics\n",
+    "\n",
+    "Calculate matching accuracy, ASW, Graph Connectivity, and other metrics to quantify integration quality."
    ]
   },
   {
