Update documentation source files

--- a/docs/source/tutorials/scRNA_CODEX_HPAP023/hpap023_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_HPAP023/hpap023_tutorial.ipynb
@@ -263,8 +263,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature correspondence between modalities\n",
-    "\n",
     "Establish a mapping between protein markers (CODEX) and gene symbols (scRNA). This mapping is used to create matched-feature AnnData objects for alignment.\n"
    ]
   },
@@ -303,8 +301,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create shared AnnData objects and subset\n",
-    "\n",
     "From the correspondence, construct `rna_shared` and `protein_shared` containing only matched features. Optionally subset to cell types of interest and filter low-variance features."
    ]
   },
@@ -393,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build Cellink object & batching\n",
+    "## Building Cellink object and running alignment\n",
     "\n",
     "Create a `Cellink` object with full and shared AnnData objects and split the shared data into batches for efficient transport computation.\n"
    ]
@@ -425,14 +421,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Alignment: preparations and execution\n",
-    "\n",
-    "Run the CelLink alignment routine. Tune weights and regularization parameters, and consider iterative refinement.\n",
-    "\n",
-    "### Alignment parameters\n",
-    "- `wt1` / `wt2`: modality weights\n",
-    "- `lambd`, `reg`: regularization\n",
-    "- `numItermax`: maximum iterations\n"
+    "Run the alignment with tuning parameters controlling modality weights, regularization, and iterative refinements. Key parameters:\n",
+    "- `wt1`, `wt2`: relative importance of each modality\n",
+    "- `lambd`, `reg`: regularization terms"
    ]
   },
   {
