--- a/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas/hpap107_pancreas_withoutCT_tutorial.ipynb
@@ -167,15 +167,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature correspondence between modalities\n",
-    "\n",
-    "Load the protein-gene mapping and construct matched-feature AnnData objects for alignment."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Building Cellink object and running alignment\n",
     "\n",
     "Create `Cellink` with full and shared AnnData objects; split into batches for efficiency."
@@ -208,8 +199,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Alignment: preparations and execution\n",
-    "\n",
     "Run the alignment with tuning parameters controlling modality weights, regularization, and iterative refinements. Key parameters:\n",
     "- `wt1`, `wt2`: relative importance of each modality\n",
     "- `lambd`, `reg`: regularization terms\n",
@@ -239,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Synchronize imputed features & predict cell types\n",
+    "## Synchronize imputed features & predict cell types\n",
     "\n",
     "After alignment, transport weights are used to predict cell types in each modality by aggregating transport mass to cells of each annotation class. We also impute cross-modal features using the learned transport maps. "
    ]
@@ -359,16 +348,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quantitative metrics\n",
-    "Use built-in metrics to quantify alignment quality. The `cellink.metrics` module computes cell-type matching accuracy and other scores. Run these functions to obtain a numeric summary of performance."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Quantitative metrics\n",
-    "\n",
     "Calculate matching accuracy, ASW, Graph Connectivity, and other metrics to quantify integration quality."
    ]
   },
