Update old tutorials

--- a/docs/source/tutorials/scRNA_CODEX_Pancreas_withCT/cellink_pancreas.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas_withCT/cellink_pancreas.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HPAP107 scRNA-seq and CODEX Integration (with cell type annotations)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# HPAP107 scRNA-seq and CODEX Integration (with cell type annotations)\n",
+    "\n",
     "Overview\n",
     "\n",
     "This tutorial demonstrates how to integrate HPAP107 scRNA-seq and CODEX datasets from human pancreas using CelLink when cell-type annotations are available.\n",
