--- a/docs/source/tutorials/scRNA_CODEX_Pancreas_withCT/cellink_pancreas.ipynb
+++ b/docs/source/tutorials/scRNA_CODEX_Pancreas_withCT/cellink_pancreas.ipynb
@@ -15,10 +15,7 @@
     "2. Data preprocessing\n",
     "3. Cellink object construction and alignment\n",
     "4. Feature imputation and cell-type matching\n",
-    "5. Visualization\n",
-    "\n",
-    "Notes\n",
-    "- Adjust file paths and parameters to your local environment and dataset sizes."
+    "5. Visualization"
    ]
   },
   {
